// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render properly 1`] = `
<DocumentFragment>
  <div
    class=" button"
  >
    buttonValue
  </div>
</DocumentFragment>
`;

exports[`<Button /> when glyph className specified should render properly 1`] = `
<DocumentFragment>
  <div
    class="material-icons button testClassName"
  >
    buttonValue
  </div>
</DocumentFragment>
`;
